# pd-perceptron

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  perceptron.c  teste_perceptron.pd
.github/workflows/: c.yml
Resources/: perceptron-help.pd
Resources/pd.cmake/.github/workflows/: c-cpp.yml
perceptron/: perceptron-example.pd  perceptron-help.pd
perceptron/data/: dataset.txt  iris-classification.txt  iris-training.txt
